[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Environment.gd" type="Script" id=1]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Target.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]


[node name="Environment" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 405.474, 245.696 )
movement_dampening = 0.02

[node name="Target" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 985.408, 156.997 )
linear_speed = 50
player_damage = 25

[node name="Target2" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 1502.89, 871.473 )
linear_speed = 100
player_damage = 50

[node name="HUD" parent="." index="3" instance=ExtResource( 4 )]

[connection signal="damage_taken" from="Player" to="." method="_on_Player_damage_taken"]

[connection signal="health_emptied" from="Player" to="." method="_on_Player_health_emptied"]

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]


